--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">College Comrade</string>
+    <string name="department_of_computer_science_nand_engineering">Department Of Computer Science \nAnd Engineering</string>
+    <string name="collage_comrade">Collage Comrade</string>
+    <string name="college_comrade">COLLEGE COMRADE</string>
 </resources>
