--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,5 +42,7 @@
     <string name="this_app_contains_all_information_about_the_computer_science_and_engineering_department_for_second_year_of_vssut_burla_n_nthe_information_like_time_table_syllabus_lecture_notes_etc_enables_user_to_access_all_the_requirements_of_a_student_in_department_the_information_here_guides_you_in_the_academic_areas_in_healthy_manner_this_is_really_a_handy_app">This app contains all information about the computer science and engineering department for second year of VSSUT, Burla.\n\nThe information like Time-Table, Syllabus, Lecture Notes, etc enables user to access all the requirements of a student in department. The information here guides you in the academic areas in healthy manner. This is really a handy app</string>
     <string name="developer_students_club_dsc_vssut_n8895350695">Developer Students Club (DSC, VSSUT): \n8895350695</string>
     <string name="we_value_your_feedback">We value your feedback</string>
+    <string name="about1">The information like time-table, syllabus, lecture notes etc enable users to meet the requirements of a student in the department.
+     The information here guides you in the academic areas. This is user friendly.</string>
 
 </resources>
